--- a/unit4/Googlefont2style.css
+++ b/unit4/Googlefont2style.css
@@ -7,7 +7,7 @@ body {
 	font-weight: normal;
 	font-family: Arial, sans-serif;
 }
-h1 {font-family: 'Oswald', sans-serif;
+h1 {font-family: 'Playfair Display', serif;
 	color: white;
 	font-weight: bold;
 }
