--- a/unit4/style.css
+++ b/unit4/style.css
@@ -7,10 +7,12 @@ body {
 	font-weight: normal;
 	font-family: Arial, sans-serif;
 }
-h1 {font-family: 'Oswald', sans-serif;
+h1 {
+	font-family: 'Oswald', sans-serif;
 	color: white;
 	font-weight: bold;
 }
 h2 {
+	font-family: 'Playfair Display', serif;
 	font-style: italic;
 }
