--- a/unit7/style.css
+++ b/unit7/style.css
@@ -3,6 +3,11 @@
  		float: left;
  		width: 25%;
  	}
+ 	.product {
+ 		float:left;
+ 		min-height: 520px;
+ 		width:50%;
+ 	}
  	section {
  		margin-left: 
  	}
