--- a/unit7/style.css
+++ b/unit7/style.css
@@ -1,6 +1,6 @@
-@media screen and (min-width: 400px;) {
- 	nav {
- 		float: left;
+@media only screen and (min-width: 400px;) {
+ 	#nav_menu {
+ 		float: right;
  		width: 25%;
  	}
  	.product {
