--- a/unit7/style.css
+++ b/unit7/style.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 400px;) {
+@media only screen and (min-width: 400px;) and (max-width: 500px;) {
  	#nav_menu {
  		float: right;
  		width: 25%;
