--- a/unit7/style.css
+++ b/unit7/style.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 320px) and (max-width: 600px) {
+@media screen only and (min-width: 320px) and (max-width: 600px) {
  	#nav_menu {
  		float: right;
  		width: 25%;
