--- a/unit7/style.css
+++ b/unit7/style.css
@@ -1,3 +1,5 @@
+metaname="viewport" content="width"
+
 @media screen only and (min-width: 320px) and (max-width: 600px) {
  	#nav_menu {
  		float: right;
