--- a/unit7/style.css
+++ b/unit7/style.css
@@ -1,4 +1,4 @@
-metaname="viewport" content="width"
+<meta name=viewport content="width=device-width, initial-scale=1">
 
 @media screen only and (min-width: 320px) and (max-width: 600px) {
  	#nav_menu {
