--- a/unit7/style.css
+++ b/unit7/style.css
@@ -1,6 +1,6 @@
 <meta name=viewport content="width=device-width, initial-scale=1">
 
-@media screen only and (min-width: 320px) and (max-width: 600px) {
+@media only screen and (min-width: 320px) and (max-width: 600px) {
  	#nav_menu {
  		float: right;
  		width: 25%;
@@ -11,6 +11,9 @@
  		padding:1em;
  		width:50%;
  	}
+ .product img{
+ 	width:50%;
+ }
  	section {
  		margin-left: 
  	}
