--- a/unit7/style.css
+++ b/unit7/style.css
@@ -18,12 +18,12 @@
  		margin-left: 
  	}
  }
-@media screen and (max-width: 800px) {
+@media screen and (min-width: 601px) and (max-width: 800px) {
  	nav li {
  		display: inline;
  	}
  
-*{margin:0 1em 1em;
+*{margin:0 0em 1em;
 	padding:0;
 	box-sizing:border-box;}
 html {
