--- a/unit7/style.css
+++ b/unit7/style.css
@@ -1,29 +1,5 @@
-<meta name=viewport content="width=device-width, initial-scale=1">
-
-@media only screen and (min-width: 320px) and (max-width: 600px) {
- 	#nav_menu {
- 		float: right;
- 		width: 25%;
- 	}
- 	.product {
- 		float:left;
- 		min-height: 520px;
- 		padding: 1em;
- 		width: 50%;
- 	}
- .product img {
- 	width: 50%;
- }
- 	section {
- 		margin-left: 
- 	}
- }
-@media screen and (min-width: 601px) and (max-width: 800px) {
- 	nav li {
- 		display: inline;
- 	}
- 
-*{margin:0 0em 1em;
+*{
+	margin:0 0em 1em;
 	padding:0;
 	box-sizing:border-box;}
 html {
@@ -53,5 +29,24 @@ h2 {
 }
 .product img {
 	width: 100%;
-	}
 }
+@media screen and (min-width: 601px) and (max-width: 800px) {
+ 	nav li {
+ 		display: inline;
+ 	}
+}
+@media only screen and (min-width: 320px) and (max-width: 600px) {
+ 	#nav_menu {
+ 		float: right;
+ 		width: 25%;
+ 	}
+ 	.product {
+ 		width: 50%;
+ 	}
+ 	.product img {
+ 		width: 50%;
+ 	}
+ 	section {
+ 		margin-left:;
+ 	}
+ }
