--- a/unit7/style.css
+++ b/unit7/style.css
@@ -1,10 +1,7 @@
 *{
 	margin:0 0em 1em;
 	padding:0;
-	box-sizing:border-box;}
-html {
-
-
+	box-sizing:border-box;
 }
 body {
 	background-image: url ("Electronic devices.jpg");
@@ -23,14 +20,14 @@ h2 {
 }
 .product {
 	float:left;
-	min-height: 520px;
+	min-height: 535px;
 	padding: 1em;
 	width: 33.33%;
 }
 .product img {
 	width: 100%;
 }
-@media screen and (min-width: 601px) and (max-width: 800px) {
+@media only screen and (min-width: 601px) and (max-width: 800px) {
  	nav li {
  		display: inline;
  	}
