--- a/unit7/style.css
+++ b/unit7/style.css
@@ -9,6 +9,10 @@ body {
 	font-weight: normal;
 	font-family: 'Playfair Display', serif;
 }
+nav {
+	background-color: #89FF00;
+	font-family: 'Arial', sans-serif;
+}
 
 h1 {
 	font-family: 'Oswald', sans-serif;
