--- a/unit7/style.css
+++ b/unit7/style.css
@@ -24,9 +24,9 @@ h2 {
 }
 .product {
 	float:left;
-	min-height: 450px;
+	min-height: 535px;
 	max-height: 600px;
-	padding: 1em;
+	padding: .75em;
 	width: 33.33%;
 }
 .product img {
