--- a/Unit10/style.css
+++ b/Unit10/style.css
@@ -9,3 +9,7 @@ body {
 	font-weight: normal;
 	font-family: 'Playfair Display', serif;
 }
+nav {
+	background-color: #89FF00;
+	font-family: 'Arial', sans-serif;
+}
