--- a/unit7/style.css
+++ b/unit7/style.css
@@ -28,7 +28,7 @@ h2 {
 	float:left;
 	min-height: 535px;
 	max-height: 600px;
-	margin:0 1em 0em;
+	margin:0 0em .25em;
 	padding: .5em;
 	width: 33.33%;
 }
