--- a/unit7/style.css
+++ b/unit7/style.css
@@ -6,8 +6,8 @@
 	box-sizing:border-box;
 }
 body {
-	background-image: url ("Electronic devices.jpg");
-	color:#222222;
+	
+	background color:#222222;
 	font-weight: normal;
 	font-family: 'Playfair Display', serif;
 }
