--- a/unit7/style.css
+++ b/unit7/style.css
@@ -38,6 +38,7 @@ h2 {
 items {
 	float:left;
 	padding:1 1em;
+	width: 25%;
 }
 }
 @media only screen and (min-width: 601px) and (max-width: 800px) {
