--- a/unit7/style.css
+++ b/unit7/style.css
@@ -37,8 +37,9 @@ h2 {
 }
 items {
 	float:left;
-	margin-left: 0 2em;
-	padding:1 1em;
+	margin-left: 0em;
+	padding:0em;
+	vertical-align: baseline;
 	width: 1em;
 	height: 100%;
 }
