--- a/Final project/style.css
+++ b/Final project/style.css
@@ -55,6 +55,15 @@ items {
 	width: 25%;
 }
 
+.wireless providers {
+	float:left;
+	min-height: 5px;
+	max-height: 30px;
+	margin-left: 1em 0em;
+	padding-left: 0em 1em;
+	width: 25%;
+}
+
 @media only screen and (min-width: 601px) and (max-width: 800px) {
  	nav li {
  		display: inline;
