--- a/Final project/style.css
+++ b/Final project/style.css
@@ -59,7 +59,7 @@ items {
 	float:left;
 	min-height: 5px;
 	max-height: 30px;
-	margin-left: 1em 0em;
+	margin-left: .5em 0em;
 	padding-left: 0em 0em;
 	width: 100%;
 }
