--- a/Final project/style.css
+++ b/Final project/style.css
@@ -52,7 +52,7 @@ items {
 	max-height: 100px;
 	margin-left: 0em;
 	padding-top: 1em;
-	width: 25%;
+	width: 1em;
 }
 
 .wireless providers {
@@ -61,7 +61,7 @@ items {
 	max-height: 30px;
 	margin-left: .5em 0em;
 	padding-left: 0em 0em;
-	width: 100%;
+	width: 1em;
 }
 
 @media only screen and (min-width: 601px) and (max-width: 800px) {
