--- a/Final project/style.css
+++ b/Final project/style.css
@@ -48,8 +48,8 @@ items {
 
 .cell phones {
 	float:left;
-	min-height:230px;
-	max-height:600px;
+	min-height: 230px;
+	max-height: 600px;
 	margin-left: 0 1em;
 	padding-top: 1em;
 	width: 4em;
@@ -62,6 +62,14 @@ items {
 	margin: .5em 0em 0em;
 	padding-left: 0em 0em;
 	width: 1em;
+}
+
+.videogames {
+	float:left;
+	min-height: 200px;
+	max-height: 640px;
+	margin-left: 1em 0em;
+	padding-top: 1em;
 }
 
 @media only screen and (min-width: 601px) and (max-width: 800px) {
