--- a/Final project/style.css
+++ b/Final project/style.css
@@ -72,6 +72,14 @@ items {
 	padding-left: 1em;
 	width: 50%;
 }
+.controllers {
+	float:left;
+	min-height: 15px;
+	max-height: 500px;
+	margin-left: 1em 0em 0em;
+	padding-left: 0em 1em;
+	width: 50%;
+}
 
 @media only screen and (min-width: 601px) and (max-width: 800px) {
  	nav li {
