--- a/Final project/style.css
+++ b/Final project/style.css
@@ -77,7 +77,7 @@ items {
 	min-height: 15px;
 	max-height: 500px;
 	margin-left: .5em 0em 0em;
-	padding-left: 0em 1em;
+	padding-bottom: 0em 1em;
 	width: 2em;
 }
 
