--- a/Final project/style.css
+++ b/Final project/style.css
@@ -70,7 +70,7 @@ items {
 	max-height: 640px;
 	margin-left: 1em 0em;
 	padding-left: 1em;
-	width: 1em;
+	width: 25%;
 }
 .controllers {
 	float:left;
