--- a/Final project/style.css
+++ b/Final project/style.css
@@ -78,7 +78,7 @@ items {
 	max-height: 500px;
 	margin: .5em 0em 0em;
 	padding-left: 0em 1em;
-	width: 2em;
+	width: 100%;
 }
 
 @media only screen and (min-width: 601px) and (max-width: 800px) {
