--- a/Final project/style.css
+++ b/Final project/style.css
@@ -74,9 +74,9 @@ items {
 }
 .controllers {
 	float:left;
-	min-height: 15px;
+	min-height: 100px;
 	max-height: 500px;
-	margin: .5em 0em 0em;
+	margin-left: .5em 0em 0em;
 	padding-left: 0em 1em;
 	width: 100%;
 }
