--- a/Final project/style.css
+++ b/Final project/style.css
@@ -77,8 +77,8 @@ items {
 	min-height: 100px;
 	max-height: 500px;
 	margin-left: .5em 0em;
-	padding-left: 0em 1em;
-	width: 100%;
+	padding-bottom: 0em 1em;
+	width: 50%;
 }
 
 @media only screen and (min-width: 601px) and (max-width: 800px) {
