--- a/Final project/style.css
+++ b/Final project/style.css
@@ -76,8 +76,8 @@ items {
 	float:left;
 	min-height: 800px;
 	max-height: 960px;
-	margin: 0em;
-	padding-bottom: 1em 0em;
+	margin: -1em;
+	padding-right: 1em 0em;
 	width: 100%;
 }
 
