--- a/taasky/style.css
+++ b/taasky/style.css
@@ -1,7 +1,18 @@
 *{ margin:0; padding:0;}
 body{
 	background-image: url(images/background.jpg);
-	background-repeat: no repeat;
+	background-repeat: no-repeat;
 	background-size: cover;
-	background-color: white
+	color: white;
+	font-family: helvetica, arial, sans-serif;
+	font-size: 24px;
+}
+div{
+	margin: 100px 0px 0px 100px;
+}
+hr{
+
+}
+p{
+
 }
