--- a/taasky/style.css
+++ b/taasky/style.css
@@ -8,11 +8,11 @@ body{
 	font-size: 24px;
 }
 div{
-	margin: 100px 0px 0px 100px;
+	margin: 250px 0px 0px 250px;
 }
 hr{
-
+	width: 48px;
 }
 p{
-
+	margin: 40px 0px 0px 40px;
 }
