--- a/taasky/style.css
+++ b/taasky/style.css
@@ -1,6 +1,6 @@
 *{ margin:0; padding:0;}
 body{
-	background-image: url(images/stripes.jpg),
+	background-image: url(images/stripes.png),
 	url(images/background.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
