--- a/taasky/style.css
+++ b/taasky/style.css
@@ -3,7 +3,7 @@ body{
 	background-image: url(images/stripes.png),
 	url(images/background.jpg);
 	background-repeat: repeat-x, no-repeat;
-	background-size: cover;
+	background-size: auto, cover;
 	color: #fd6e6e;
 	font-family: helvetica, arial, sans-serif;
 	font-size: 24px;
