--- a/taasky/style.css
+++ b/taasky/style.css
@@ -1,4 +1,4 @@
-*{ margin:0; padding:0;}
+*{ margin:0; padding:0; box-sizing: border-box;}
 body{
 	background-image: url(images/stripes.png),
 	url(images/background.jpg);
