--- a/MontyPython/style.css
+++ b/MontyPython/style.css
@@ -2,7 +2,13 @@
 body{
 	background-image: url(images/background.jpg);
 	background-attachment:fixed;
+	background-size:cover;
 	background-repeat: no-repeat;
-	color: white;
-	font-size: 40px 
+	color: #fff;
+	font-size: 16px;
+	font-family: 'Roboto', sans-serif;
+	font-weight:100; 
+}
+section {
+		padding:5em 0;
 }
