--- a/MontyPython/style.css
+++ b/MontyPython/style.css
@@ -1,7 +1,7 @@
 *{ margin:0; padding:0; box-sizing; border-box;}
 body{
 	background-image: url(images/background.jpg);
-	
+	background-attachment:fixed;
 	background-size:cover;
 	background-repeat: no-repeat;
 	color: #fff;
