--- a/MontyPython/style.css
+++ b/MontyPython/style.css
@@ -12,6 +12,12 @@ body{
 section {
 		padding:5em 0;
 }
+section#splash {
+	height: 100vh;
+}
+section#splash div {
+	padding: 15em 0 0 200px;
+}
 section#mainContent {
 	background:#E91E63;
 }
