--- a/MontyPython/style.css
+++ b/MontyPython/style.css
@@ -1,11 +1,14 @@
-*{ margin:0; padding:0; box-sizing; border-box;}
+*{ margin:0; padding:0; box-sizing; border-box;
+		transition: all 250ms cubic bezier(0.420, 0.000, 0.580, 1.000);
+		trasnlation-timing-function: cubic-bezier(0.420, 0.000, 0.580, 1.000);
+	}
 body{
 	background-image: url(images/background.jpg);
 	background-attachment:fixed;
 	background-size:cover;
 	background-repeat: no-repeat;
 	color: #fff;
-	font-size: 36px;
+	font-size: 16px;
 	font-family: 'Roboto', sans-serif;
 	font-weight:100; 
 }
