--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -4,6 +4,7 @@ body{
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
+	font-family:sans-serif;
 	font-size: 40px;
 	margin:0em;
 }
