--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -19,6 +19,9 @@ section#footer{
 section#classnote{
 	font-size: 20px;
 	padding: 0;
-	border: 10px ;
-	color: #e91e63;
+	border: 10px;
+	color:
+}
+section#classnote{
+	border-box: #e91e63;
 }
