--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -25,5 +25,5 @@ section#classnote{
 section#classnote{
 	box-sizing: border-box;
 	background-color: #e91e63;
-	length: 33.33%;
+	column-count: 3;
 }
