--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -26,5 +26,5 @@ section#classnote{
 	box-sizing: border-box;
 	background-color: #e91e63;
 	width: 33.33%;
-	column-count: 3;
+	column-width: 75px;
 }
