--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -19,6 +19,7 @@ section#footer{
 section#classnote{
 	font-size: 16px;
 	padding: 0;
+	margin: 1px 0px 1px 0px;
 	border: 10px;
 	color:#FFFFFF;
 }
