--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -18,8 +18,8 @@ section#footer{
 }
 section#classnote{
 	font-size: 16px;
-	padding: 0;
-	margin: 1px 0px 1px 0px;
+	padding: 1px 0px 1px 0px;
+	margin: 0;
 	border: 10px;
 	color:#FFFFFF;
 }
