--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -21,6 +21,7 @@ section#classnote{
 	padding: 1px 0px 1px 0px;
 	margin: 0;
 	border: 10px;
+	word-spacing: 5px;
 	color:#FFFFFF;
 }
 section#classnote{
