--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -25,9 +25,9 @@ section#classnote{
 	color:#FFFFFF;
 }
 section#classnote{
-	box-sizing: border-box;
+	box-sizing: box;
 	background-color: #e91e63;
 	float: left;
-	width: 100%;
+	width: 33%;
 	column-width: 0px;
 }
