--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -31,6 +31,7 @@ section#classnote{
 section#players{
 	box-sizing: box;
 	background-color: #03a9f4;
+	margin: 1px;
 	float: left;
 	width: 49%;
 }
