--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -31,7 +31,8 @@ section#classnote{
 section#players{
 	box-sizing: box;
 	background-color: #03a9f4;
-	margin: 1.5px;
+	margin: 2em;
+	content: 5em;
 	float: left;
 	width: 49%;
 	color:#FFFFFF;
