--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -23,7 +23,7 @@ section#classnote{
 	color:#FFFFFF;
 }
 section#classnote{
-	position: fixed;
+	position: relative;
 	box-sizing: border-box;
 	background-color: #e91e63;
 	float: left;
