--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -25,6 +25,8 @@ section#classnote{
 section#classnote{
 	position: relative;
 	box-sizing: border-box;
+	height: 50px;
+	width: 100px;
 	background-color: #e91e63;
 	float: left;
 	width: 32%;
