--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -40,3 +40,9 @@ section#players{
 	width: 48%;
 	color:#FFFFFF;
 }
+section#players{
+	font-size: 16px;
+	padding: 0px 2px 0px 0px;
+	height: 100px;
+	width: 150px;
+}
