--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -28,6 +28,7 @@ section#classnote{
 	background-color: #e91e63;
 	float: left;
 	width: 32%;
+	border: 1px solid black;
 }
 section#players{
 	font-size: 16px;
@@ -44,5 +45,5 @@ section#players{
 
 }
 section#Play{
-	border-radius: 100%;
+	border-radius: 50%;
 }
