--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -31,6 +31,7 @@ section#classnote{
 	border: 1px solid black;
 }
 section#players{
+	display: inline;
 	font-size: 16px;
 	box-sizing: box;
 	background-color: #03a9f4;
