--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -45,7 +45,7 @@ section#players{
 	padding: 1px 2px 1px 0px;
 
 }
-img#Play{
+section#players img#Play{
 	border-radius: 50%;
-	border-image: 40% round;
+	border-image: 100% round;
 }
