--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -28,7 +28,7 @@ section#classnote{
 	background-color: #e91e63;
 	float: left;
 	width: 32%;
-	border: 1px solid black;
+	border: 5px;
 }
 section#players{
 	display: inline;
@@ -45,7 +45,7 @@ section#players{
 	padding: 1px 2px 1px 0px;
 
 }
-section#players img#Play{
+section#players img{
 	border-radius: 50%;
 	border-image: 100% round;
 }
