--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -42,7 +42,7 @@ section#players{
 	color:#FFFFFF;
 }
 section#players h1{
-	padding-right: 10px;
+	padding-right: 50&;
 }
 section#players{
 	padding: 1px 2px 1px 0px;
