--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -26,6 +26,7 @@ section#classnote{
 	position: relative;
 	box-sizing: border-box;
 	background-color: #e91e63;
+	padding: 0px 1px 0px 1px;
 	float: left;
 	width: 33.33%;
 	border: 5px;
