--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -4,7 +4,7 @@ body{
 	border: 2px 0px 0px 2px;
 	padding: 1px 1px 1px 1px;
 	content: 0px 0px 0px 0px;
-	color:;
+	background-color: gold;
 }
 section#schools{
 	width: 33%;
