--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -11,7 +11,7 @@ section#schools{
 	width: 33%;
 	padding: 1px;
 	float: left;
-	font-color: white; 
+	font-color: #FFFFFF; 
 }
 section#schools img{
 	border-color: solid black;
