--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -11,7 +11,8 @@ section#schools{
 	width: 33%;
 	padding: 1px;
 	float: left;
-	font-color: #FFFFFF; 
+	font-size: 20px;
+	color: #FFFFFF; 
 }
 section#schools img{
 	border-color: solid black;
