--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -10,6 +10,7 @@ body{
 section#schools{
 	width: 33%;
 	padding: 5px;
+	margin: 2px 0px 2px 0px;
 	float: left;
 	font-size: 20px;
 	color: #FFFFFF; 
