--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -20,7 +20,7 @@ section#schools img{
 	border: 1px;
 	border-style: solid;
 }
-section#principals{
+section#principal{
 	width: 33%;
 	padding: 0px;
 }
