--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -22,7 +22,7 @@ section#schools img{
 }
 section#principal{
 	width: 33%;
-	padding: 0px;
+	padding: 10px 0px 0px 0px;
 	float: left;
 }
 section#superintendent{
