--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -23,6 +23,7 @@ section#schools img{
 section#principal{
 	width: 33%;
 	padding: 10px 0px 0px 0px;
+	content: 40px 0px 0px 0px;
 	float: left;
 }
 section#superintendent{
