--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -22,6 +22,7 @@ section#schools img{
 }
 section#principal{
 	width: 33%;
+	margin: 10px 0px 0px 0px;
 	padding: 10px 0px 0px 0px;
 	content: 0px 0px 0px 50px;
 	float: left;
