--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -18,11 +18,12 @@ section#schools{
 section#schools img{
 	box-sizing: border-box;
 	border-color: solid black;
-	border: 10px;
+	border: 4px;
+	margin: 8px;
 	border-style: solid;
 }
 section#principal{
-	width: 34%;
+	width: 32%;
 	margin: 25px 0px 0px 0px;
 	padding: 10px 0px 0px 0px;
 	content: 0px 0px 0px 50px;
