--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -20,7 +20,7 @@ section#schools img{
 	border-color: solid black;
 	border: 4px;
 	padding: 8px;
-	margin: 8px;
+	margin: 0px
 	border-style: solid;
 }
 section#principal{
