--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -19,6 +19,7 @@ section.footer{
 section.classnote{
 	font-size: 16px;
 	padding: 5px 0px 5px 0px;
+	margin: 4px 0px 4px 0px;
 	word-spacing: 5px;
 	color:#FFFFFF;
 	position: relative;
