--- a/MontyPython2/style.css
+++ b/MontyPython2/style.css
@@ -34,7 +34,7 @@ section.players{
 	font-size: 16px;
 	box-sizing: box;
 	background-color: #03a9f4;
-	margin: .5em;
+	margin: 15px 0px 5px 0px;
 	content: 2em;
 	float: left;
 	width: 48%;
