--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -1,6 +1,6 @@
 *{ margin:0; padding:0; box-sizing: border-box;}
 body{
-	margin: 1px
+	margin: 1px 0px 0px 1px;
 	border: 2px 0px 0px 2px;
 	padding: 1px 1px 1px 1px;
 	content: 0px 10px 0px 10px;
