--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -7,15 +7,16 @@ body{
 	background-color: gold;
 	font-color: ;
 }
-section#schools{
+section.schools{
 	width: 33%;
 	padding: 5px;
 	margin: 2px 0px 2px 0px;
 	float: left;
 	font-size: 20px;
-	color: #FFFFFF; 
+	color: #FFFFFF;
+	max-height: 50px;
 }
-section#schools img{
+section.schools img{
 	box-sizing: fixed-box;
 	border-color: solid black;
 	border: 4px;
@@ -24,7 +25,7 @@ section#schools img{
 	content: 0px;
 	border-style: solid;
 }
-section#principal{
+section.principal{
 	width: 32%;
 	margin: 25px 0px 0px 0px;
 	padding: 10px 0px 0px 0px;
