--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -23,7 +23,8 @@ section.schools img{
 	margin: 1px;
 	content: 0px;
 	border-style: solid;
-	max-height: 100px
+	max-height: 100px;
+	max-width: 25px;
 }
 section.principal{
 	width: 32%;
