--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -39,7 +39,7 @@ section.principal{
 section.superintendent{
 	width: 40%;
 	float: left;
-	margin: 0px;
+	margin: 1px 0px 1px 0px;
 	font-size: 26px;
 	font-family: sans-serif;
 	color: #FFFFFF;
