--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -40,6 +40,7 @@ section.superintendent{
 	width: 40%;
 	float: left;
 	margin: 1px 0px 1px 0px;
+	padding: 0px 10px 0px 10px;
 	font-size: 26px;
 	font-family: sans-serif;
 	color: #FFFFFF;
