--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -50,5 +50,5 @@ section.superintendent{
 section.superintedent img{
 	box-sizing: fixed-box;
 	border-color: none;
-	max-height: 5;
+	max-height: 5px;
 }
