--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -50,5 +50,6 @@ section.superintendent{
 section.superintedent img{
 	box-sizing: fixed-box;
 	border-color: none;
-	max-height: 5px;
+	max-height: 5em;
+	max-width: 10em
 }
