--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -54,6 +54,6 @@ section.superintedent img{
 	margin: 10px;
 	padding: 10px;
 	content: 0px;
-	max-height: 2em;
+	max-height: 20px;
 	max-width: 10em;
 }
