--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -51,7 +51,7 @@ section.superintedent img{
 	box-sizing: fixed-box;
 	border-color: none;
 	border: 0px;
-	margin: 10px;
+	margin: 25px 0px 20px 0px;
 	padding: 10px;
 	content: 0px;
 	max-height: 20px;
