--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -29,13 +29,18 @@ section.schools img{
 section.principal{
 	width: 32%;
 	margin: 25px 0px 0px 0px;
-	padding: 10px 0px 0px 20px;
+	padding: 150px 0px 0px 100px;
 	content: 50px;
 	float: left;
 	font-size: 18px;
 	max-height: 70px;
 	font-family: sans-serif;
 	color: #FFFFFF;
+}
+section.principal img{
+	width: 30%;
+	max-height: 150px;
+	max-width: 200px;
 }
 section.superintendent{
 	width: 40%;
