--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -39,8 +39,9 @@ section.principal{
 }
 section.principal img{
 	width: 30%;
-	max-height: 150px;
-	max-width: 200px;
+	float: left;
+	max-height: 50em;
+	max-width: 40px;
 }
 section.superintendent{
 	width: 40%;
