--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -43,8 +43,8 @@ section.principal img{
 	width: 30%;
 	padding: 50px 0px 0px 50px;
 	float: left;
-	max-height: 50em;
-	max-width: 40em;
+	max-height: 50px;
+	max-width: 40px;
 }
 section.superintendent{
 	width: 40%;
