--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -43,6 +43,7 @@ section.principal img{
 	width: 30%;
 	margin: 75px 0px 0px 0px;
 	padding: 50px 0px 0px 50px;
+	content: 100px;
 	float: left;
 	max-height: 25em;
 	max-width: 40em;
