--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -34,6 +34,7 @@ section.principal{
 	float: left;
 	font-size: 18px;
 	max-height: 150px;
+	max-width: 50px;
 	font-family: sans-serif;
 	color: #FFFFFF;
 }
