--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -30,7 +30,7 @@ section.principal{
 	width: 30%;
 	margin: 0px 0px 0px 10px;
 	padding: 0px 0px 15px 60px;
-	content: 100px;
+	content: 175px 0px 0px 0px;
 	float: left;
 	font-size: 18px;
 	max-height: 100px;
