--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -17,7 +17,7 @@
 .faculty {
 	background-color:#F4F1C9;
 }
-.faculty principals img {
+.section.principals img {
 	float: left;
 	width: 32.33%;
 	margin: 1%;
