--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -30,6 +30,10 @@
 	float: left;
 	width: 49%;
 	margin: 1%;
+	min-width: 20em;
+	min-height: 15em;
+	max-width: 30em;
+	max-height: 25em;
 }
 .clearfix {
 	
