--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -26,7 +26,7 @@
 	max-width: 20em;
 	max-height: 25em;
 }
-.faculty.superintendent img {
+.superintendent img {
 	float: left;
 	width: 49%;
 	margin: 1%;
