--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -17,11 +17,11 @@
 .faculty {
 	background-color:#F4F1C9;
 }
-div.principal {
+.principal {
 	text-align: center;
 	width: 200px;
 }
-.principal span, .principal img {
+.principal img {
 	float: left;
 	width: 25%;
 	margin: 1%;
@@ -29,7 +29,6 @@ div.principal {
 	min-height: 10em;
 	max-width: 20em;
 	max-height: 25em;
-	display: block;
 }
 .superintendent img {
 	float: left;
