--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -23,8 +23,9 @@
 }
 .principal img {
 	float: left;
-	width: 100%;
-	min-width: 15em;
+	width: 32.33%;
+	margin: 1%;
+	min-width: 30em;
 	min-height: 10em;
 	max-width: 50em;
 	max-height: 20em;
