--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -18,7 +18,7 @@
 	background-color:#F4F1C9;
 }
 .principal {
-	text-align:;
+	text-align: center;
 	width: 200px;
 }
 .principal img {
@@ -29,7 +29,6 @@
 	min-height: 5em;
 	max-width: 40em;
 	max-height: 15em;
-	display: block;
 }
 .superintendent img {
 	float: left;
