--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -22,8 +22,8 @@
 	width: 200px;
 }
 .principal img {
-	position: fixed;
-	float: left;
+
+	float: none;
 	width: 32.33%;
 	margin: 1%;
 	min-width: 10em;
