--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -31,7 +31,7 @@
 	min-height: 15em;
 	max-width: 20em;
 	max-height: 30em;
-	padding: 100px;
+	padding: 10em;
 }
 .superintendent img {
 	float: none;
