--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -33,6 +33,10 @@
 	max-height: 40em;
 
 }
+.superintendent {
+	text-align: center;
+	width: 100px;
+}
 .superintendent img {
 	float: left;
 	width: 48%;
