--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -37,7 +37,7 @@
 	text-align: center;
 	width: 100px;
 }
-.superintendent img {
+.superintendent span, .superintendent img {
 	display: inline;
 	float: none;
 	width: 48%;
