--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -38,7 +38,7 @@
 	width: 250px;
 	max-width: 700px;
 	clear: none;
-	display: inline-block;
+	display: none;
 
 }
 .superintendent span, .superintendent img {
