--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -44,8 +44,9 @@
 	float: left;
 	width: 49%;
 	margin: 1%;
-	min-width: 20em;
+	min-width: 25em;
 	min-height: 15em;
+	display: block;
 	width: 200px;
 	height: 100px;
 	max-width: 35em;
