--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -53,7 +53,7 @@
 	max-width: 50em;
 	max-height: 30em;
 	left: 250px;
-	clear: right;
+	clear: left;
 	padding: 5px 10px 5px 10px;
 	margin-bottom: 25px;
 }
