--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -44,7 +44,7 @@
 }
 .superintendent span, .superintendent img {
 	float: left;
-	width: 48%;
+	width: 49%;
 	margin: 1%;
 	min-width: 25em;
 	min-height: 20em;
@@ -56,7 +56,7 @@
 	left: 250px;
 	clear: left;
 	padding: 5px 0px 5px 0px;
-	margin-bottom: 25px;
+	margin: 0px 10px 0px 10px;
 }
 .clearfix {
 	overflow: auto;
