--- a/Oradellschools/style.css
+++ b/Oradellschools/style.css
@@ -48,7 +48,7 @@
 	margin: 1%;
 	min-width: 25em;
 	min-height: 20em;
-	display: block;
+	display:;
 	position: fixed;
 	width: 200px;
 	height: 100px;
