--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -1,7 +1,7 @@
 *{ margin:0; padding:0; box-sizing: border-box;}
 
 .Westchester.North-South {
-	background-color: green;
+	background-color: #009933;
 	background-repeat: no-repeat;
 	float: left;
 }
