--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -10,6 +10,7 @@
 	margin: 1%;
 	min-width: 50px;
 	min-height: 30px;
-	max-width: 200px;
+	max-width: 150px;
 	max-height: 100px;
+	float: left;
 }
