Parkways in New York

--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -14,12 +14,12 @@
 	max-height: 30px;
 	float: left;
 }
-.Westchester-Bronx {
+.Westchester-BronxParkways {
 	background-color: #663300;
 	background-repeat: no-repeat;
 	float: left;
 }
-.Westchester-Bronx img {
+.Westchester-BronxParkways img {
 	width: 49%;
 	margin: 1%;
 	min-width: 10px;
