Parkways in New York

--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -18,6 +18,7 @@
 	background-color: #663300;
 	background-repeat: no-repeat;
 	float: left;
+	padding: 25px 75px 25px 75px;
 }
 .Westchester-BronxParkways img {
 	width: 100%;
