--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -29,7 +29,7 @@
 	max-height: 400px;
 	float: left;
 	padding: 50px 100px 50px 100px;
-	margin:;
+	margin: 0px 25px 0px 25px;
 }
 .clearfix {
 	overflow: auto;
