--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -29,7 +29,7 @@
 	max-height: 400px;
 	float: left;
 	padding: 50px 200px 50px 200px;
-	margin: 0px 0px 0px 0px;
+	margin: ;
 }
 .clearfix {
 	overflow: auto;
