Parkways in New York

--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -29,7 +29,7 @@
 	max-height: 400px;
 	float: left;
 	padding: 50px 200px 50px 200px;
-	margin: ;
+	margin: 50px 250px 50px 250px;
 }
 .clearfix {
 	overflow: auto;
