Parkways in New York

--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -19,6 +19,7 @@
 	background-repeat: no-repeat;
 	float: left;
 	padding: 50px 200px 50px 200px;
+	margin: 0px 65px 0px 65px;
 }
 .Westchester-BronxParkways img {
 	width: 49%;
